# rusterizer

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  geometry.rs  main.rs  obj.rs  point2d.rs  point3d.rs  rectangle.rs  screen.rs  texture.rs  transform.rs  triangle.rs
